일급함수 & add_maker

--- a/lecture1.html
+++ b/lecture1.html
@@ -10,8 +10,8 @@
 /*
 순수함수
  - 동일한 인자 -> 동일한 결과
- - 리턴값 외에 외부상태의 영향이 없다(부수효과가 없다)
- - 평가시점이 중요하지 않다
+ - 리턴값 외에 외부상태의 영향이 없다.(부수효과가 없다)
+ - 평가시점이 중요하지 않다.
 */
 function add(a, b) {
     return a + b;
@@ -22,7 +22,7 @@ console.log( add(10, 6) );
 
 /*
 외부 값을 참조하기 때문에 외부 값에 따라 결과가 다르므로 순수함수가 아님
-c가 10일 때와 20일 때 결과 값이 달라지기 때문에 평가 시점이 매우 중요해 진다.
+c가 10일 때와 20일 때 결과 값이 달라지기 때문에 평가 시점이 매우 중요해짐
 */
 var c = 10
 function add2(a, b) {
@@ -67,23 +67,58 @@ var obj2 = add5(obj1, 20);
 console.log( obj1.val );
 console.log( obj2.val );
 
-
-
-
-
-
-
-
-
 /*
 일급함수
  - 함수를 값으로 다룰 수 있다.
-
+ - 함수는 함수로 인자를 받을 수 있다.
 */
+var f1 = function(a) { return a * a };
+console.log(f1);
 
+var f2 = add
+console.log(f2);
 
+function f3(f) {
+    return f();
+}
+
+console.log( f3(function() { return 10; }) );
+console.log( f3(function() { return 20; }) );
+
+// 함수형 프로그래밍은 순수함수와 일급함수를 조합하여 프로그래밍하는 패러다임
 
 /* add_maker */
+function add_maker(a) {
+    /*
+      아래 함수는 a의 값을 기억하고 있는 클로저
+      또한 a의 값을 참조하고 있지만 변경할 수 없기 때문에 순수함수이다.
+    */
+
+    return function(b) {
+        return a + b;
+    }
+}
+
+var add10 = add_maker(10);
+console.log( add10(20) );
+
+var add5 = add_maker(5);
+var add15 = add_maker(15);
+console.log( add5(10) );
+console.log( add15(10) );
+
+function f4(f1, f2, f3) {
+    return f3(f1() + f2());
+}
+
+console.log(
+    f4(
+        function() { return 2; },
+        function() { return 1; },
+        function(a) { return a * a; }
+    )
+)
+
 </script>
 </body>
 </html>
