--- a/lecture2.html
+++ b/lecture2.html
@@ -58,7 +58,7 @@ console.log(ages);
  응용형 함수 -> 함수를 인자로 받아 원하는 시점에 평가
  고차함수 -> 함수를 인자로 받거나 함수를 리턴 함수안에서 인자로 받은 함수를 실행
 */
-function _filter(list, predi) {
+/*function _filter(list, predi) {
     var new_list = [];
     for(var i = 0; i < list.length; i++) {
         if(predi(list[i])) {
@@ -74,7 +74,7 @@ function _map(list, mapper) {
         new_list.push(mapper(list[i]));
     }
     return new_list;
-}
+}*/
 
 var over30 = _filter(users, function(user) { return user.age >= 30; })
 console.log(over30);
@@ -106,23 +106,6 @@ console.log(
     )
 )
 
-
-
-
-// console.log(
-//     _filter([1, 2, 3, 4], function(num) { return num % 2; })
-// )
-// console.log(
-//     _filter([1, 2, 3, 4], function(num) { return !(num % 2); })
-// )
-
-
-
-
-var over30 = _filter(users, function(user) { return user.age >= 30; });
-var under30 = _filter(users, function(user) { return user.age < 30; });
-var names = _map(over30, function(user) { return user.name });
-var ages = _map(under30, function(user) { return user.age });
 
 
 </script>
