--- a/lecture2.html
+++ b/lecture2.html
@@ -106,7 +106,85 @@ console.log(
     )
 )
 
+/*console.log(
+    document.querySelectorAll('*').map(function(node) {
+        return node.nodeName;
+    })
+)*/
 
+console.log(
+    _map(document.querySelectorAll('*'), function(node) {
+        return node.nodeName;
+    })
+);
+
+// 외부 다형성 -> array_like, arguments 객체 등
+// 내부 다형성 -> 함수를 통해서
+
+// 4. 커링
+/*
+ 함수와 인자를 다루는 기법
+*/
+function _curry(fn) {
+    return function(a, b) {
+        return arguments.length == 2 ? fn(a, b) : function(b) { return fn(a, b); };
+    }
+}
+
+function _curryr(fn) {
+    return function(a, b) {
+        return arguments.length == 2 ? fn(a, b) : function(b) { return fn(b, a); };
+    }
+}
+
+
+var add = _curry(function(a, b) {
+    return a + b;
+})
+
+var add10 = add(10);
+var add5 = add(5);
+console.log( add10(5) );
+console.log( add(5)(3) );
+console.log( add5(3) );
+console.log( add(1, 2) );
+
+var sub = _curryr(function(a, b) {
+    return a - b;
+});
+console.log( sub(10, 5) );
+
+var sub10 = sub(10);
+console.log( sub10(5) );
+
+var _get = _curryr(function(obj, key) {
+    return obj == null ? undefined : obj[key];
+});
+
+console.log(
+    _map(
+        _filter(users, function(user) { return user.age >= 30; }),
+        _get('name')
+    )
+)
+
+console.log(
+    _map(
+        _filter(users, function(user) { return user.age < 30; }),
+        _get('age')
+    )
+)
+/*
+var user1 = users[0];
+console.log(user1.name);
+console.log(_get(user1, 'name'));
+console.log(_get('name')(user1));
+// console.log(users[10].name);
+// console.log(_get(users[10], 'name'));
+
+var getName = _get('name');
+console.log( getName(user1) );
+*/
 
 </script>
 </body>
