--- a/lecture2.html
+++ b/lecture2.html
@@ -121,11 +121,11 @@ console.log(
 // 외부 다형성 -> array_like, arguments 객체 등
 // 내부 다형성 -> 함수를 통해서
 
-// 4. 커링
+// 3. 커링
 /*
  함수와 인자를 다루는 기법
 */
-function _curry(fn) {
+/*function _curry(fn) {
     return function(a, b) {
         return arguments.length == 2 ? fn(a, b) : function(b) { return fn(a, b); };
     }
@@ -135,8 +135,7 @@ function _curryr(fn) {
     return function(a, b) {
         return arguments.length == 2 ? fn(a, b) : function(b) { return fn(b, a); };
     }
-}
-
+}*/
 
 var add = _curry(function(a, b) {
     return a + b;
@@ -157,9 +156,9 @@ console.log( sub(10, 5) );
 var sub10 = sub(10);
 console.log( sub10(5) );
 
-var _get = _curryr(function(obj, key) {
+/*var _get = _curryr(function(obj, key) {
     return obj == null ? undefined : obj[key];
-});
+});*/
 
 console.log(
     _map(
@@ -185,6 +184,32 @@ console.log(_get('name')(user1));
 var getName = _get('name');
 console.log( getName(user1) );
 */
+console.clear();
+
+// 4. _reduce
+var slice = Array.prototype.slice;
+function _rest(list, num) {
+    return slice.call(list, num || 1);
+}
+
+function _reduce(list, iter, memo) {
+    if(arguments.length == 2) {
+        memo = list[0];
+        list = _rest(list);
+    }
+    _each(list, function (val) {
+        memo = iter(memo, val);
+    })
+    return memo;
+}
+console.log(
+    _reduce([1, 2, 3], add, 10)
+)// 16
+
+console.log(
+    _reduce([1, 2, 3, 4], add)
+)// 6
+
 
 </script>
 </body>
