--- a/lecture2.html
+++ b/lecture2.html
@@ -187,7 +187,7 @@ console.log( getName(user1) );
 console.clear();
 
 // 4. _reduce
-var slice = Array.prototype.slice;
+/*var slice = Array.prototype.slice;
 function _rest(list, num) {
     return slice.call(list, num || 1);
 }
@@ -201,7 +201,7 @@ function _reduce(list, iter, memo) {
         memo = iter(memo, val);
     })
     return memo;
-}
+}*/
 console.log(
     _reduce([1, 2, 3], add, 10)
 )// 16
@@ -210,6 +210,85 @@ console.log(
     _reduce([1, 2, 3, 4], add)
 )// 6
 
+// 5. pipe
+/*function _pipe() {
+    var fns = arguments;
+    return function(arg) {
+        return _reduce(fns, function(arg, fn) {
+            return fn(arg)
+        }, arg);
+    }
+}
+
+function _go(arg) {
+    var fns = _rest(arguments);
+    return _pipe.apply(null, fns)(arg);
+}*/
+
+var f1 = _pipe(
+    function(a) { return a + 1; },
+    function(a) { return a * 2; },
+    function(a) { return a * a; });
+
+console.log( f1(1) );
+
+// go
+_go(1,
+    function(a) { return a + 1; },
+    function(a) { return a * 2; },
+    function(a) { return a * a; },
+    console.log
+);
+
+console.log(
+    _map(
+        _filter(users, function(user) { return user.age >= 30; }),
+        _get('name')
+    )
+)
+
+console.log(
+    _map(
+        _filter(users, function(user) { return user.age < 30; }),
+        _get('age')
+    )
+)
+
+_go(users,
+    function(users) {
+        return _filter(users, function(user) {
+            return user.age >= 30;
+        });
+    },
+    function(users) {
+        return _map(users, _get('name'));
+    },
+    console.log
+)
+
+_go(users,
+    function(users) {
+        return _filter(users, function(user) {
+            return user.age < 30;
+        });
+    },
+    function(users) {
+        return _map(users, _get('age'));
+    },
+    console.log
+)
+
+_go(users,
+    _filter(function(user) { return user.age >= 30; }),
+    _map(_get('name')),
+    console.log
+)
+
+_go(users,
+    _filter(user => user.age < 30),
+    _map(_get('age')),
+    console.log
+)
 
 </script>
 </body>
