find, findIndex, some, every

--- a/lecture3.html
+++ b/lecture3.html
@@ -47,7 +47,82 @@ console.log(
   _compact([1, 2, 0, false, null, {}]));
 
 
-// 3. 찾아내기 - find, some, every
+// 3. 찾아내기 - find
+//   1. find 만들기
+
+console.log(
+  _get(_find(users, function(user) {
+    return user.id == 50;
+  }), 'name')
+);
+
+_go(users,
+  _find_index(function(user) { return user.id == 50; }),
+  console.log);
+
+console.log(
+  _find_index(users, function(user) {
+    return user.id == 50;
+  })
+);
+
+//   2. find_index
+//   3. some
+
+console.log(_some([1, 2, 5, 10, 20], function(val) {
+  return val > 20;
+}));
+
+console.log(_some([1, 2, 5, 10, 20], function(val) {
+  return val > 10;
+}));
+
+//   4. every
+console.log(_every([1, 2, 5, 10, 20], function(val) {
+  return val > 10;
+}));
+// false
+console.log(_every([12, 24, 5, 10, 20], function(val) {
+  return val > 3;
+}));
+// true
+
+console.log(
+  _some([1, 2, 0, 10])
+)
+// true
+console.log(
+  _some([null, false, 0])
+)
+// false
+console.log(
+  _some([null, false, 1])
+)
+// true
+
+console.log(
+  _every([1, 2, 0, 10])
+)
+// false
+console.log(
+  _every([null, false, 0])
+)
+// false
+console.log(
+  _every([null, false, 1])
+)
+// false
+console.log(
+  _every([1, 2, 10])
+)
+// true
+
+console.log(
+  _some(users, function(user) {
+    return user.age < 20;
+  })
+);
+
 // 4. 접기 - reduce, min, max, group_by, count_by
 
 
