--- a/lecture3.html
+++ b/lecture3.html
@@ -123,7 +123,66 @@ console.log(
   })
 );
 
-// 4. 접기 - reduce, min, max, group_by, count_by
+// 4. 접기 - reduce
+
+function _min(data) {
+  return _reduce(data, function(a, b) {
+    return a < b ? a : b;
+  });
+}
+
+function _max(data) {
+  return _reduce(data, function(a, b) {
+    return a > b ? a : b;
+  });
+}
+
+console.log(
+  _min([1, 2, 4, 10, 5, -4])
+);
+console.log(
+  _max([1, 2, 4, 10, 5, -4])
+);
+
+function _min_by(data, iter) {
+  return _reduce(data, function(a, b) {
+    return iter(a) < iter(b) ? a : b;
+  });
+}
+function _max_by(data, iter) {
+  return _reduce(data, function(a, b) {
+    return iter(a) > iter(b) ? a : b;
+  });
+}
+var _min_by = _curryr(_min_by),
+  _max_by = _curryr(_max_by);
+
+console.log(
+  _min_by([1, 2, 4, 10, 5, -4], Math.abs)
+);
+
+console.log(
+  _max_by([1, 2, 4, 10, 5, -4, -11], Math.abs)
+);
+
+console.log(
+  _min_by(users, function(user) {
+    return user.age;
+  })
+);
+
+_go(users,
+  _filter(user => user.age >= 30),
+  _map(_get('age')),
+  _min,
+  console.log);
+
+_go(users,
+  _reject(user => user.age >= 30),
+  _max_by(_get('age')),
+  _get('name'),
+  console.log);
+
 
 
 
