--- a/lecture3.html
+++ b/lecture3.html
@@ -183,23 +183,67 @@ _go(users,
   _get('name'),
   console.log);
 
+console.clear();
+
+var users = [
+  { id: 10, name: 'ID', age: 36 },
+  { id: 20, name: 'BJ', age: 32 },
+  { id: 30, name: 'JM', age: 32 },
+  { id: 40, name: 'PJ', age: 27 },
+  { id: 50, name: 'HA', age: 25 },
+  { id: 60, name: 'JE', age: 26 },
+  { id: 70, name: 'JI', age: 31 },
+  { id: 80, name: 'MP', age: 23 },
+  { id: 90, name: 'FP', age: 13 }
+];
+
+_go(users,
+  _group_by(_get('age')),
+  console.log);
+
+_go(users,
+  _group_by(function(user) {
+    return user.age - user.age % 10;
+  }),
+  console.log);
 
 
+_go(users,
+  _group_by(function(user) {
+    return user.name[0];
+  }),
+  console.log);
 
+_go(users,
+  _group_by(_pipe(_get('name'), _head)),
+  console.log);
 
+//   3. count_by, inc
 
+console.log(
+  _count_by(users, function(user) {
+    return user.age - user.age % 10;
+  })
+);
 
+_go(users,
+  _count_by(function(user) {
+    return user.name[0];
+  }),
+  console.log);
 
+console.log( _pairs(users[0]) );
 
+console.clear();
 
+var f1 = _pipe(
+  _count_by(function(user) { return user.age - user.age % 10; }),
+  _map((count, key) => `<li>${key}대는 ${count}명 입니다.</li>`),
+  list => '<ul>' + list.join('') + '</ul>',
+  document.write.bind(document));
 
-
-
-
-
-
-
-
+_go(users, _reject(user => user.age < 20), f1);
+_go(users, _filter(user => user.age < 20), f1);
 
 
 </script>
